# draw-trongle-3ds

./: .gitignore  Cargo.toml  shader.pica
include_texture_macro/src/: lib.rs
romfs/: textured-cornell-box.mtl
src/: main.rs  obj.rs
src/model/: colour.rs  material.rs  mod.rs  shape.rs  texture.rs
vert_attr/: Cargo.toml
