[package]
name = "draw-trongle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citro3d = { git = "https://github.com/rust3ds/citro3d-rs", version = "0.1.0" }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs/" }
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
vert_attr = { path = "vert_attr" }
include_texture_macro = { path = "include_texture_macro" }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
